cmake_minimum_required(VERSION 3.16)
project(splitkv VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(SPLITKV_BUILD_TESTS "Build tests" ON)
option(SPLITKV_BUILD_BENCH "Build benchmarks" ON)
option(SPLITKV_BUILD_TOOLS "Build CLI and server tools" ON)

add_subdirectory(src)
if(SPLITKV_BUILD_TOOLS)
  add_subdirectory(tools)
endif()
if(SPLITKV_BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
if(SPLITKV_BUILD_BENCH)
  add_subdirectory(bench)
endif()
